# customer_support_assistant

./: .env.example  .gitignore  Backend Test from Santi.md  Customer Support.postman_collection.json  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  readme.md
models/: request_models.py
src/: groq.py  groq_assistant.py  tickets.py  user.py
src/models/: enums.py  request_models.py  schemas.py  user_roles.py
utils/: database.py  exception_handler.py  groq_assistant.py  request_utils.py  security.py
utils/db_models/: main.py
