[project]
name = "customer-support-assistant"
version = "0.1.0"
description = "A simple ticket creation backend interface"
authors = [
    {name = "Rusab Khan"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose (==3.3.0)",
    "psycopg-binary (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
